# codex-desktop-linux

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codex-cli-version.txt  electron-builder.yml  llms.txt  package-lock.json  package.json  upstream-etag.txt  upstream-sha256.txt  upstream-version.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  jc2-72108-unit-cert-replay.yml
assets/metainfo/: io.openai.codex.desktop.metainfo.xml
docs/: computer-use-linux.md
native/node-repl/: extract-prompts.py  patch-browser-docs.py  server.mjs
native/sky-wayland/: Cargo.toml
native/sky-wayland/src/: apps.rs  engine.rs  keymap.rs  kwin.rs  main.rs
scripts/: build-packages.sh  get-codex-version.sh  register-computer-use.sh  setup.sh  smoke-verify.sh  update.sh
scripts/debian/: postinst  postrm
scripts/internal/: build-computer-use.sh  build-native.sh  extract-dmg.sh  test-node-repl.py
skills/computer-use-linux/: SKILL.md
